# lotina

./: .gitignore  README.md  main.py  model.py  modeltraining.py  notes.py  processor.py  pyproject.toml
esp32/: http.py  main.py  notes.py
homeassistant/: .dockerignore  Dockerfile  build.yaml  config.yaml  lotina  lotina.tf  run.sh
lotina/: __main__.py  db.py  model.py  modeltraining.py  play.py  processor.py
